# params-attribute-example

./: Cargo.toml
proc-macro-tests/: rename_params.rs
src/: lib.rs
