[package]
name = "params-attribute-example"
version = "0.1.0"
authors = ["Hexilee <hexileee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2-next = { version = "1.0.0-rc1" }
quote-next = { version = "1.0.0-rc1" }
syn-next = { version = "1.0.0-rc1", features = ["full", "visit-mut"] }

[lib]
proc-macro = true

[patch.crates-io]
syn-next = { git = "https://github.com/dtolnay/syn", branch = "master"}
proc-macro2-next = { git = "https://github.com/alexcrichton/proc-macro2", branch = "next" }
quote-next = { git = "https://github.com/dtolnay/quote" }

[[test]]
name = "rename-params"
path = "proc-macro-tests/rename_params.rs"
edition = "2018"
