[package]
name = "params-attribute-example"
version = "0.1.0"
authors = ["Hexilee <hexileee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[[test]]
name = "rename-params"
path = "proc-macro-tests/rename_params.rs"
edition = "2018"
